--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "## Workout Analytics\n",
@@ -11,12 +11,15 @@
     "#### 03. Exploring Basically"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import ssl\n",
@@ -47,21 +50,16 @@
     "    (lambda e: None)(err)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loding Exercise Dictionary Pickle[/Users/kickscar/DoWork/PycharmProjects/HELLCHANG-PRACTICES/datasets/pickles/exercise-dict.pkl]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
@@ -74,22 +72,16 @@
     "print(f'Loding Exercise Dictionary Pickle[{dictfile}]')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Raw Data Count(Exercises, Days): (2842, 424)\n",
-      "Exercise Transform Data(Tuple) Count: 2842\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import re\n",
     "from datetime import datetime\n",
@@ -151,154 +143,32 @@
     "print(f'Exercise Transform Data(Tuple) Count: {len(restransform)}')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exercise Days: 424\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# 03. Exploring1: How Exercise Days?\n",
     "days = list(set([t[0] for t in restransform]))\n",
     "print(f'Exercise Days: {len(days)}')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Ab Rollout[Ab Wheel]', 32)\n",
-      "('Anold Press[Dumbbell]', 5)\n",
-      "('Arnold Press[Dumbbell]', 35)\n",
-      "('Assisted Dips[Machine]', 70)\n",
-      "('Assisted Pull-Up[Machine]', 97)\n",
-      "('Back Extension', 45)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 20)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Machine]', 13)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 79)\n",
-      "('Cross Lunges', 1)\n",
-      "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 120)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 34)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 77)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 21)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
-      "('Hiit[Cycle]', 9)\n",
-      "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 104)\n",
-      "('Hip Adduction[Machine]', 95)\n",
-      "('Hip Bridge', 15)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Hip Thrust', 5)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 66)\n",
-      "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 137)\n",
-      "('Leg Extension[Machine]', 82)\n",
-      "('Long Pull Row[Cable]', 102)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 147)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Dumbbell]', 5)\n",
-      "('Military Press[Smith Machine]', 25)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Kettlebell]', 50)\n",
-      "('Plank', 104)\n",
-      "('Power Leg Press[Machine]', 75)\n",
-      "('Pull-Up', 12)\n",
-      "('Push-Up', 12)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 55)\n",
-      "('Running', 99)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Seated Chest Press[Machine]', 98)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 92)\n",
-      "('Shoulder Press[Machine]', 105)\n",
-      "('Side Lateral Raise[Dumbbell]', 97)\n",
-      "('Side Lateral Raise[Machine]', 19)\n",
-      "('Side-Lying Hip Abduction', 32)\n",
-      "('Split Squat', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
-      "('Split Squat[Smith Machine]', 19)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 60)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
-      "('Trx Lunge', 1)\n",
-      "('Trx Row', 2)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Walking', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Wide Pulldown Rear[Machine]', 36)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Wrist Roller', 22)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# 03. Exploring2: Which Exercises?\n",
     "exs = [t[1] for t in restransform]\n",
@@ -309,133 +179,16 @@
     "    print(d)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Lying Leg Curls[Machine]', 147)\n",
-      "('Lat Pulldown[Machine]', 137)\n",
-      "('Deadlift[Barbell]', 120)\n",
-      "('Shoulder Press[Machine]', 105)\n",
-      "('Hip Abduction[Machine]', 104)\n",
-      "('Plank', 104)\n",
-      "('Long Pull Row[Cable]', 102)\n",
-      "('Running', 99)\n",
-      "('Seated Chest Press[Machine]', 98)\n",
-      "('Assisted Pull-Up[Machine]', 97)\n",
-      "('Side Lateral Raise[Dumbbell]', 97)\n",
-      "('Hip Adduction[Machine]', 95)\n",
-      "('Seated Row[Machine]', 92)\n",
-      "('Leg Extension[Machine]', 82)\n",
-      "('Chest Fly[Pec Deck Machine]', 79)\n",
-      "('Flat Bench Press[Barbell]', 77)\n",
-      "('Power Leg Press[Machine]', 75)\n",
-      "('Assisted Dips[Machine]', 70)\n",
-      "('Incline Bench Press[Machine]', 66)\n",
-      "('Straight Arm Pulldown[Cable]', 60)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 55)\n",
-      "('One Leg Deadlift[Kettlebell]', 50)\n",
-      "('Back Extension', 45)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
-      "('Wide Pulldown Rear[Machine]', 36)\n",
-      "('Arnold Press[Dumbbell]', 35)\n",
-      "('Dips', 34)\n",
-      "('Ab Rollout[Ab Wheel]', 32)\n",
-      "('Side-Lying Hip Abduction', 32)\n",
-      "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Military Press[Smith Machine]', 25)\n",
-      "('Wrist Roller', 22)\n",
-      "('Hack Squat[Machine]', 21)\n",
-      "('Bent Over Row[Barbell]', 20)\n",
-      "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Side Lateral Raise[Machine]', 19)\n",
-      "('Split Squat[Smith Machine]', 19)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
-      "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Pull-Up', 12)\n",
-      "('Push-Up', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
-      "('Hiit[Cycle]', 9)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Military Press[Dumbbell]', 5)\n",
-      "('Hip Thrust', 5)\n",
-      "('Anold Press[Dumbbell]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Reverse Crunch', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Split Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# 03. Exploring3: and How Often?\n",
     "sorted_by_count = sorted(dataset_exs, key=lambda t: t[1], reverse=True)\n",
@@ -443,7 +196,10 @@
     "     print(d)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
